--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     overflow-x: hidden;
-    font-family: 'Century Gothic', sans-serif;
+    font-family: "Luckiest Guy", cursive;
     background-image: url('../img/geometry.jpg');
     background-size: cover;
     background-attachment: fixed;
@@ -12,7 +12,7 @@ body {
     max-width: 500px; /* Increased max-width for larger display */
     width: 90%; /* Keeps width responsive */
     margin: auto;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(172, 249, 255, 0.9);
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Optional: Add shadow */
 }
